<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <!--<ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/round_image_circle"
        android:scaleType="center"
        android:paddingStart="8dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:drawableStart="@drawable/img"
        android:drawablePadding="8dp"
        android:layout_gravity="end"
        android:gravity="center"
        android:scaleX="0.6"
        android:scaleY="0.6"
        android:text="English"
        android:textSize="22sp"
        android:textColor="@color/primary_green" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/home_img"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_green"
        app:cardCornerRadius="12dp">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:paddingHorizontal="12dp"
          android:paddingVertical="20dp"
          android:orientation="vertical">

          <EditText
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:backgroundTint="@color/white"
              android:fontFamily="@font/inter"
              android:hint="@string/email"
              android:inputType="textEmailAddress"
              android:textColorHint="@color/white"
              android:textSize="14sp" />

          <EditText
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:hint="@string/password"
              android:fontFamily="@font/inter"
              android:textSize="14sp"
              android:layout_marginTop="10dp"
              android:backgroundTint="@color/white"
              android:textColorHint="@color/white"
              android:inputType="textPassword" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/forgot_username_or_password"
                android:textColor="@color/white"
                />
          <com.google.android.material.button.MaterialButton
              android:layout_width="match_parent"
              android:layout_height="60dp"
              android:layout_marginTop="25dp"
              app:cornerRadius="12dp"
              android:text="Login"
              android:textColor="@color/primary_green"
              android:backgroundTint="@color/white"
              />

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:paddingVertical="12dp"
              android:gravity="center"
              android:text="@string/new_user_sign_up"/>
      </LinearLayout>
    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_green"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/copyright_2022_all_rights_reserverd"/>
    </LinearLayout>
</ScrollView>