<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_relative">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="40dp"
        android:paddingHorizontal="30dp"
        android:layout_marginTop="180dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/login"
            android:textColor="@color/dark_black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLogin"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/karla"
            android:textSize="17sp"
            android:text="@string/sign_to_your_account"
            android:textColor="@color/dark_gery" />

        <LinearLayout
            android:id="@+id/linerEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/tv1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email"
                android:textColor="@color/dark_gery"
                android:textSize="20sp"
                android:fontFamily="@font/karla"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/light_white"
                android:hint="@string/enter_your_email"
                android:padding="15dp"
                android:textColor="@color/dark_black"
                android:fontFamily="@font/karla"
                android:inputType="textEmailAddress"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/linerEmail">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Password"
                android:textColor="@color/dark_gery"
                android:textSize="20sp"
                android:fontFamily="@font/karla"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@color/light_white"
                    android:hint="@string/enter_your_email"
                    android:padding="15dp"
                    android:textColor="@color/dark_black"
                    android:fontFamily="@font/karla"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/karla"
            android:textColor="@color/dark_black"
            android:layout_marginTop="20dp"
            android:layout_below="@id/linerPassword"
            android:textSize="17sp"
            android:textStyle="bold"
            android:text="@string/forgot_password"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/karla"
        android:textColor="@color/dark_black"
        android:layout_marginTop="20dp"
        android:layout_above="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/i_don_t_have_account"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="70dp"

        android:layout_height="70dp"

        app:cornerRadius="0dp"
        android:insetBottom="0dp"
        android:backgroundTint="@color/green"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:layout_alignParentBottom="true"
        />
</RelativeLayout>